# lights-out-legacy

./: .gitignore  Cargo.toml  README.md  build.sh
src/: lib.rs
src/assets/: building.rs  feature.rs  mod.rs  modifier.rs  resource.rs  stat.rs  technology.rs  text.rs  unlock.rs  upgrade.rs
src/game/: game.rs  mod.rs
src/game/asset/: building.rs  manager.rs  mod.rs  modifier.rs  resource.rs  unlock.rs
src/game/building/: asset.rs  building.rs  data.rs  manager.rs  mod.rs
src/game/modifier/: data.rs  manager.rs  mod.rs  modifier.rs
src/game/planet/: data.rs  manager.rs  mod.rs  planet.rs
src/game/rendering/: loading.rs  log.rs  manager.rs  mod.rs  resource.rs
src/game/rendering/tab/: building.rs  lighthouse.rs  manager.rs  mod.rs  stat.rs  tab.rs  technology.rs  upgrade.rs
src/game/resource/: asset.rs  data.rs  manager.rs  mod.rs  resource.rs
src/game/save/: manager.rs  mod.rs  save.rs
src/game/save/save_file/: mod.rs  options.rs  save_file.rs  stuffs.rs
src/game/stuff/: asset.rs  building.rs  district.rs  manager.rs  mod.rs  modifier.rs  planet.rs  resource.rs  storage.rs  stuff.rs  system.rs
src/game/stuff/building/: asset.rs  building.rs  manager.rs  mod.rs  stuff.rs
src/game/stuff/feature/: asset.rs  manager.rs  mod.rs  stuff.rs
src/game/stuff/modifier/: asset.rs  manager.rs  mod.rs  modifier.rs
src/game/stuff/pop/: manager.rs  mod.rs  pop.rs
src/game/stuff/stat/: mod.rs  (+4 more)
src/resources/: building.rs  mod.rs  modifier.rs  resource.rs
src/utils/: mod.rs  number.rs
www/: index.css  index.html  index.js  package-lock.json  package.json
(+36 files in other folders)
